--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "firebase": "^5.11.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-big-calendar": "^0.20.4",
     "react-dom": "^16.8.6",
     "react-moment": "^0.8.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "react-table": "^6.9.2"
+    "react-table": "^6.9.2",
+    "react-with-firebase-auth": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
